<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/periwinkle_gray">

    <TextView
        android:id="@+id/first_option_options_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/first_option_options_layout"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:padding="10dp"
        />

    <TextView
        android:id="@+id/second_option_options_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/second_option_options_layout"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:padding="10dp"
        />

    <TextView
        android:id="@+id/third_option_options_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/third_option_options_layout"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:padding="10dp"
        />

</LinearLayout>