<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/catskill_white"
    android:layout_margin="1dp"
    app:cardElevation="0dp"
    app:cardCornerRadius="6dp"
    app:cardPreventCornerOverlap="false"
    android:id="@+id/cv_new_user">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="4dp"
        android:id="@+id/relativeLayout">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/circle_image_view"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@color/black"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/circle_image_view"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/user_name_database"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_name_nc"
                android:textColor="#303030"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/user_last_message_database"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/latest_message"
                android:textColor="#696969"
                android:textSize="16sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:visibility="gone"
                android:id="@+id/tv_time_stamp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"
                android:textSize="12sp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/tv_date_stamp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"
                android:textSize="12sp"
                android:textColor="@color/black"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>