<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.activities.UserDetailsActivity"
    android:background="@color/catskill_white"
    android:orientation="vertical"
    android:layout_gravity="center">

    <TextView
        android:id="@+id/tv_logo_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/periwinkle_gray"
        android:fontFamily="@font/ranchers"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/frame_profile_picture"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:scaleType="centerCrop"
        android:background="@drawable/user_profile_picture"
        app:layout_constraintEnd_toEndOf="@+id/tv_logo_bar"
        app:layout_constraintStart_toStartOf="@+id/tv_logo_bar"
        app:layout_constraintTop_toBottomOf="@+id/tv_logo_bar">

    </FrameLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@id/tv_logo_bar"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/tv_logo_bar"
        app:layout_constraintTop_toBottomOf="@+id/frame_profile_picture">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/til_user_name"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="20dp"
            android:autofillHints="name"
            android:background="@drawable/rounded_corners"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textSize="18sp"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>

    <Button
        android:id="@+id/finish_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/blue_haze"
        android:text="@string/finish"
        android:textColor="#696969"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/linearLayout"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/selected_picture_circle_frame"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:civ_border_width="1dp"
        app:layout_constraintBottom_toBottomOf="@+id/frame_profile_picture"
        app:layout_constraintEnd_toEndOf="@+id/frame_profile_picture"
        app:layout_constraintStart_toStartOf="@+id/frame_profile_picture"
        app:layout_constraintTop_toTopOf="@+id/frame_profile_picture" />

</androidx.constraintlayout.widget.ConstraintLayout>