<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.activities.SettingsActivity"
    android:background="@color/catskill_white"
    android:orientation="vertical"
    android:layout_gravity="center">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/periwinkle_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_scrollFlags="scroll|enterAlways|snap"
        app:liftOnScroll="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/arrow_back_button" />

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ranchers"
        android:text="@string/settings"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:layout_marginStart="50dp"
        app:layout_anchor="@+id/appBarLayout"
        app:layout_anchorGravity="center"
        app:layout_constraintBottom_toBottomOf="@+id/appBarLayout"
        app:layout_constraintStart_toStartOf="@+id/appBarLayout"
        app:layout_constraintTop_toTopOf="@+id/appBarLayout" />

    <FrameLayout
        android:id="@+id/frame_profile_picture"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="32dp"
        android:layout_gravity="center"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

    <LinearLayout
        android:id="@+id/linearLayoutImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/linear_borders"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frame_profile_picture">

        <LinearLayout
            android:id="@+id/linearLayout0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/save_photo_tick_button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="8dp"
                android:background="@drawable/ic_tick"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <Button
                android:id="@+id/delete_photo_button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="8dp"
                android:background="@drawable/ic_delete"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="22dp"
        android:background="@drawable/rounded_corners"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutImage">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_name_til"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginStart="12dp"
            android:background="#00000000"
            android:hint="@string/user_name"
            android:maxLength="20"
            android:maxLines="1"
            android:textSize="22sp" />

        <Button
            android:id="@+id/update_name_check"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/ic_tick"
            tools:ignore="SpeakableTextPresentCheck" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="22dp"
        android:background="@drawable/rounded_corners"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_bio_til"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:background="#00000000"
            android:layout_marginStart="12dp"
            android:hint="@string/bio"
            android:maxLength="500"
            android:maxLines="2"
            android:textSize="22sp" />

        <Button
            android:id="@+id/update_bio_tick"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/ic_tick"
            tools:ignore="SpeakableTextPresentCheck" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="22dp"
        android:background="@drawable/rounded_corners"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <DatePicker
            android:id="@+id/userDatePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:datePickerMode="spinner"
            android:calendarViewShown="false"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_birthday_til"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:layout_marginStart="12dp"
            android:background="#00000000"
            android:hint="@string/birth_year"
            android:inputType="number"
            android:maxLines="1"
            android:maxLength="4"
            android:textSize="22sp" />

        <Button
            android:id="@+id/edit_birthday_tick"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/ic_tick"
            tools:ignore="SpeakableTextPresentCheck" />

    </LinearLayout>

    <Button
        android:id="@+id/delete_account_button"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="42dp"
        android:backgroundTint="@color/amethyst_smoke"
        android:text="@string/delete_account"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />

    <Button
        android:id="@+id/sign_out_button"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:visibility="gone"
        android:backgroundTint="@color/amethyst_smoke"
        android:text="@string/sign_out"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/delete_account_button"
        tools:ignore="TouchTargetSizeCheck" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/selected_picture_circle_frame"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:civ_border_width="1dp"
        app:layout_constraintBottom_toBottomOf="@+id/frame_profile_picture"
        app:layout_constraintEnd_toEndOf="@+id/frame_profile_picture"
        app:layout_constraintStart_toStartOf="@+id/frame_profile_picture"
        app:layout_constraintTop_toTopOf="@+id/frame_profile_picture" />

</androidx.constraintlayout.widget.ConstraintLayout>